--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "javascript-stub",
+  "name": "cards",
   "version": "0.0.0",
   "main": "index.js",
   "license": "UNLICENSED",
   "scripts": {
-    "start": "node index.js",
+    "start": "electron .",
     "test": "scripts/test-with-coverage.sh"
   },
   "devDependencies": {
     "chai": "^4.0.2",
     "chai-as-promised": "^7.0.0",
+    "electron": "^5.0.2",
     "mocha": "^5.2.0",
     "mocha-jenkins-reporter": "^0.4.0",
     "npm-run-all": "^4.1.5",
-    "nyc": "^13.1.0",
+    "nyc": "^14.1.1",
     "source-map-support": "^0.5.9",
     "verify-it": "1.2.1"
   },
