--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "UNLICENSED",
   "scripts": {
+    "prestart": "webpack",
     "start": "electron .",
     "test": "scripts/test-with-coverage.sh"
   },
@@ -16,7 +17,9 @@
     "npm-run-all": "^4.1.5",
     "nyc": "^14.1.1",
     "source-map-support": "^0.5.9",
-    "verify-it": "1.2.1"
+    "verify-it": "1.2.1",
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.3"
   },
   "dependencies": {}
 }
