--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "devDependencies": {
     "chai": "^4.0.2",
     "chai-as-promised": "^7.0.0",
+    "chai-dom": "^1.8.1",
     "electron": "^5.0.2",
+    "jsdom": "^15.1.1",
     "mocha": "^5.2.0",
     "mocha-jenkins-reporter": "^0.4.0",
     "npm-run-all": "^4.1.5",
